<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tracks">

    <fragment
        android:id="@+id/navigation_tracks"
        android:name="com.example.grooveix.ui.fragment.TrackFragment"
        android:label="@string/title_tracks"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.grooveix.ui.fragment.SearchFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.example.grooveix.ui.fragment.PlaylistFragment"
        android:label="@string/title_playlists"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/nav_queue"
        android:name="com.example.grooveix.ui.fragment.QueueFragment"
        tools:layout="@layout/fragment_queue" />

    <fragment
        android:id="@+id/nav_currently_playing"
        android:name="com.example.grooveix.ui.fragment.PlayerFragment"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/nav_edit_playlist"
        android:name="com.example.grooveix.ui.fragment.EditPlaylistFragment"
        tools:layout="@layout/fragment_edit_playlist">
        <argument
            android:name="playlist"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="com.example.grooveix.ui.media.entity.Playlist" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_track"
        android:name="com.example.grooveix.ui.fragment.EditTrackFragment"
        tools:layout="@layout/fragment_edit_track">
        <argument
            android:name="track"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="com.example.grooveix.ui.media.entity.Track" />
    </fragment>

    <action
        android:id="@+id/action_edit_track"
        app:destination="@id/nav_edit_track" />

    <action
        android:id="@+id/action_tracks"
        app:destination="@id/navigation_tracks" />
</navigation>