<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:paddingBottom="12dp" >

        <ImageView
            android:id="@+id/editTrackArtwork"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:clickable="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/editTrackArtworkIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_edit_24"
            android:clickable="true"
            android:layout_margin="12dp"
            android:contentDescription="@string/set_album_artwork"
            android:layout_alignBottom="@id/editTrackArtwork"
            android:layout_alignEnd="@id/editTrackArtwork" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@id/editTrackArtworkIcon" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTrackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textField1"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/artist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTrackArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textField2"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/disk">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTrackDisc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textField3"
            android:layout_marginHorizontal="24dp"
            android:layout_toEndOf="@+id/textField3"
            android:hint="@string/track">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTrackTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/update_track_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textField3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="86dp"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="22dp"
                android:elevation="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/update_track_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_add_playlist_template"
                android:visibility="visible" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
