<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_mini_player">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClose"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/baseline_arrow_back_ios_new_24"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/artwork_placeholder"
            tools:ignore="ContentDescription" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_image"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:text="@string/change_playlist_artwork"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/delete_image"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:text="@string/delete_playlist_artwork"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/save_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_add_playlist_template"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/save"
            android:layout_marginBottom="8dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_centerVertical="true"
            android:layout_alignTop="@id/add_playlist_button"
            android:layout_alignBottom="@id/add_playlist_button"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>