<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:id="@+id/playlist_view"
    android:background="@color/background_default"
    android:theme="@style/Theme.Grooveix">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|snap">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/helveticaneuecyr_black"
                android:gravity="center"
                android:text="@string/title_playlists"
                android:textSize="34sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/add_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="22dp"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/add_playlist"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_playlist_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_add_playlist_template"
            android:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/noPlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/no_playlist_text"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_playlist_button" />


    <com.l4digital.fastscroll.FastScrollRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:bubbleColor="#ffffff"
        app:bubbleSize="small"
        app:bubbleTextColor="#000000"
        app:bubbleTextSize="24sp"
        app:handleColor="#999999"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_playlist_button"
        app:showBubble="true"
        app:showTrack="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
